--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@material-table/core": "^6.4.4",
     "@mui/icons-material": "^6.1.1",
+    "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.1",
     "@mui/x-charts": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
